extract Ayce components from Alpine components utilize Alpine's on(Before)ComponentInitialized for the on(After)Init methods

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "start": "serve -l 8080",
-    "build": "tsc --build ./tsconfig.json && rollup ./build/index.js --format iife --name \"counterApp\" --file app.js"
+    "build": "tsc --build ./tsconfig.json && rollup ./build/index.js --format iife --name \"ExamplesApp\" --file app.js"
   },
   "devDependencies": {
     "rollup": "^2.40.0",
