--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
   "license": "MIT",
   "scripts": {
     "start": "serve -l 8080",
-    "build": "tsc --build ./tsconfig.json && rollup ./build/index.js --format iife --name \"ExamplesApp\" --file app.js"
+    "build": "rollup -c"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
+    "@rollup/plugin-typescript": "^8.2.0",
+    "ayce": "0.0.4",
     "rollup": "^2.40.0",
     "serve": "^11.3.2",
+    "tslib": "^2.1.0",
     "typescript": "^4.2.3"
   }
 }
