--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-typescript": "^8.2.0",
+    "@viol/core": "^0.0.1",
     "rollup": "^2.40.0",
     "serve": "^11.3.2",
     "tslib": "^2.1.0",
     "typescript": "^4.2.3"
-  },
-  "dependencies": {
-    "@viol/core": "^0.0.1"
   }
 }
